--- a/.github/workflows/clock-in.yml
+++ b/.github/workflows/clock-in.yml
@@ -10,8 +10,8 @@ on:
   # | +———– hour (0 – 23)
   # +————- min (0 – 59)
   #
-  schedule:
-      - cron: "29 0 * * *"
+  # schedule:
+  #     - cron: "29 0 * * *"
   workflow_dispatch: {}
 jobs:
   run:
